big refactors to the code

--- a/views/build.gradle
+++ b/views/build.gradle
@@ -12,6 +12,7 @@ android {
 }
 
 dependencies {
-    compile support.utils
     testCompile 'junit:junit:4.12'
+    compile project(path:':dag')
+    compile project(path:':dag')
 }
