--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
@@ -23,8 +21,27 @@ wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
 
+apply from: 'dependencies.gradle'
+
+configure(subprojects.findAll { it.name != 'testapp' }) {
+    apply plugin:'com.android.library'
+
+    android {
+        compileSdkVersion project.targetSdkVersion.toInteger()
+        buildToolsVersion androidBuildToolsVersion
+        defaultConfig {
+            minSdkVersion project.minSdkVersion
+            targetSdkVersion project.targetSdkVersion
+            consumerProguardFiles 'proguard-rules.pro'
+        }
+    }
+
+    dependencies {
+        testCompile test.junit
+    }
+}
+
 task clean(type:Delete) {
     delete rootProject.buildDir
 }
 
-apply from: 'dependencies.gradle'
