--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,10 +1,14 @@
 ext {
     supportLibraryVersion = '25.4.0'
-
     support = [
         appCompat : "com.android.support:appcompat-v7:$supportLibraryVersion",
         utils : "com.android.support:support-core-utils:$supportLibraryVersion",
         fragments : "com.android.support:support-fragment:$supportLibraryVersion"
+    ]
+
+    coreVersion = project.versionName
+    me = [
+        core : "com.saantiaguilera.graph_flow:core:$coreVersion"
     ]
 
     junitVersion = '4.12'
