--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,6 @@ minSdkVersion = 14
 targetSdkVersion = 25
 androidBuildToolsVersion = 25.0.2
 
-groupName = "com.saantiaguilera"
+groupName = com.saantiaguilera.graph_flow
 artifactName = ''
 versionName = 1.0.0
