--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ configure(subprojects.findAll { it.name != 'testapp' }) {
             minSdkVersion project.minSdkVersion
             targetSdkVersion project.targetSdkVersion
             consumerProguardFiles 'proguard-rules.pro'
+            versionName = project.versionName
         }
     }
 
