--- a/views/build.gradle
+++ b/views/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
-    compile project(path:':core')
+    if (isForPublish) {
+        compile me.core
+    } else {
+        compile project(path:':core')
+    }
 }
