--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,21 @@ wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
 
+def isForPublish = {
+    return (System.getenv('CI') &&
+        System.getenv('TRAVIS_BRANCH') == "master" &&
+        System.getenv('PUBLISH_MODULES') &&
+        !System.getenv(('TRAVIS_PULL_REQUEST')))
+}
+
+task shouldPublish() {
+    doLast {
+        if (!isForPublish()) {
+            throw new GradleException('Dont publish. You cant like this.')
+        }
+    }
+}
+
 apply from: 'dependencies.gradle'
 
 configure(subprojects.findAll { it.name != 'testapp' }) {
@@ -40,6 +55,9 @@ configure(subprojects.findAll { it.name != 'testapp' }) {
     }
 
     artifactName = project.name
+
+    // Add a variable for knowing if its a publish or not
+    ext.isForPublish = isForPublish()
 
     dependencies {
         testCompile test.junit
