--- a/.travis.yml
+++ b/.travis.yml
@@ -63,3 +63,6 @@ env:
   global:
   - export GRADLE_VERSION=$(sed -n "/[0-9]\.[0-9]/p" gradle/wrapper/gradle-wrapper.properties | cut -c 67-69)
   - TERM=dumb
+
+before_install:
+  - unset ANDROID_NDK_HOME
