--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,10 @@ wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
 
-def isForPublish = {
-    return (System.getenv('CI') &&
-        System.getenv('TRAVIS_BRANCH') == "master" &&
-        System.getenv('PUBLISH_MODULES') &&
-        !System.getenv(('TRAVIS_PULL_REQUEST')))
-}
+ext.isForPublish = (System.getenv('CI') &&
+    System.getenv('TRAVIS_BRANCH') == "master" &&
+    System.getenv('PUBLISH_MODULES') &&
+    !System.getenv(('TRAVIS_PULL_REQUEST')))
 
 task shouldPublish() {
     doLast {
@@ -57,7 +55,7 @@ configure(subprojects.findAll { it.name != 'testapp' }) {
     artifactName = project.name
 
     // Add a variable for knowing if its a publish or not
-    ext.isForPublish = isForPublish()
+    ext.isForPublish = parent.isForPublish
 
     dependencies {
         testCompile test.junit
