--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ jobs:
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
         skip_cleanup: true
+        body: CHANGELOG.md
         on:
           branch: master
 
