Fix travis and create release manually

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ wrapper {
 ext.isForPublish = (System.getenv('CI') &&
     System.getenv('TRAVIS_BRANCH') == "master" &&
     System.getenv('CI_PUBLISHING') &&
-    !System.getenv(('TRAVIS_PULL_REQUEST')))
+    System.getenv(('TRAVIS_PULL_REQUEST')) == "false")
 
 task shouldPublish() {
     doLast {
