--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,6 @@ minSdkVersion = 14
 targetSdkVersion = 25
 androidBuildToolsVersion = 25.0.3
 
-groupName = com.saantiaguilera.graph_flow
+groupName = com.saantiaguilera.graphflow
 artifactName = ''
-versionName = 1.1.1
+versionName = 1.2.0
