--- a/gradle.properties
+++ b/gradle.properties
@@ -15,10 +15,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-minSdkVersion = 14
 targetSdkVersion = 25
 androidBuildToolsVersion = 25.0.3
 
 groupName = com.saantiaguilera.graphflow
-artifactName = ''
-versionName = 1.2.1
+libraryVersion = 1.2.0
