--- a/fragments/build.gradle
+++ b/fragments/build.gradle
@@ -1,9 +1,11 @@
+android {
+    defaultConfig {
+        minSdkVersion minSdkVersions.fragments
+    }
+}
+
 dependencies {
     compile support.fragments
 
-    if (isForPublish) {
-        compile me.core
-    } else {
-        compile project(path:':core')
-    }
+    compile project(path:':core')
 }
