--- a/testapp/build.gradle
+++ b/testapp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion androidBuildToolsVersion
 
     defaultConfig {
-        minSdkVersion 16 // Conductor requires it
+        minSdkVersion minSdkVersions.max { it.value }.value
         targetSdkVersion project.targetSdkVersion
         applicationId "com.u.direction_acyclic_graph"
         versionCode 1
