--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':testapp', ':core', ':fragments', ':views', ':conductor'
+include ':testapp', ':fragments', ':views', ':conductor', ':core'
